# ai-asst-db

./: .gitignore  KM文件管理系統規格書_MongoDB直裝版.docx  README.md  cli.py  pyproject.toml
config/: settings.py
data/: manifest.json  勞動基準法.json
data/processed/: 勞動基準法_chunks.json
db/: __init__.py  connection.py
docs/: AI_PROMPT.md  ARCHITECTURE.md  FRONTEND_DESIGN.md  INSTALLATION.md  index.html
docs/assets/: index-BMLYOV94.css  index-By4gfFKO.js
examples/: usage_example.py
frontend/: vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DataTable.jsx  Sidebar.jsx  UploadModal.jsx
frontend/src/pages/: Library.jsx
models/: __init__.py  document.py
notebooks/: document_workflow.ipynb  tutorial.ipynb
scripts/: import_labor_law.py  init_db.py
services/: __init__.py  document_service.py
