[project]
name = "ai-asst-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "pymongo>=4.15.5",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
]
